docs: update README with simplified deployment and improved quick start guide
- Reorganize deployment section with simplified Docker Compose script
- Add web management interface to feature list
- Update quick start guide with login instructions
- Improve default admin account documentation
- Enhance FAQ section with more detailed explanations